pricing section completed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-black font-poppins">
+  <body class="bg-background font-poppins">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
